--- a/style.css
+++ b/style.css
@@ -177,4 +177,40 @@ a:hover {
     margin: auto 0;
   }
   
+.section__text {
+    align-self: center;
+    text-align: center;
+}
+
+.section__text p {
+    font-weight: 600;
+  }
+  
+.section__text__p1 {
+    text-align: center;
+  }
+
+.section__text__p2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+  }
+
+.title {
+    font-size: 3rem;
+    text-align: center;
+  }
+  
+#socials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+  }
+
+  /* ICONS */
+
+  .icon {
+    cursor: pointer;
+    height: 2rem;
+  }
 
