--- a/style.css
+++ b/style.css
@@ -414,3 +414,15 @@ a:hover {
 .email-icon {
   height: 2.5rem;
 }
+
+/* FOOTER */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
+
