--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,3 @@
-
 @media screen and (max-width: 1400px) {
   #profile {
     height: 83vh;
@@ -14,10 +13,10 @@
 }
 
 @media screen and (max-width: 1200px) {
-  #navbar {
+  #desktop-nav {
     display: none;
   }
-  #ham-nav {
+  #hamburger-nav {
     display: flex;
   }
   #experience,
@@ -45,12 +44,6 @@
   }
   .about-containers {
     margin-top: 0;
-  }
-  .btn-color-2 {
-      color: black;
-  }
-  .p-mac{
-      display: none;
   }
 }
 
