--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 1400px) {
   #profile {
     height: 83vh;
@@ -13,7 +14,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-  #desktop-nav {
+  #navbar {
     display: none;
   }
   #hamburger-nav {
@@ -44,6 +45,12 @@
   }
   .about-containers {
     margin-top: 0;
+  }
+  .btn-color-2 {
+      color: black;
+  }
+  .p-mac{
+      display: none;
   }
 }
 
