--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -95,14 +95,14 @@
   }
   .section__pic-container {
     width: auto;
-    height: auto; /* Remove fixed height based on viewport width */
+    height: auto; 
     justify-content: center;
 }
 
 .section__pic-container img {
   width: 100%;
   height: auto;
-  object-fit: contain; /* Ensure the image fits within the container without cropping */
+  object-fit: contain; 
 }
 
   .section__text__p2 {
